--- a/DeviceItemView/deviceitem.ui
+++ b/DeviceItemView/deviceitem.ui
@@ -13,8 +13,11 @@
   <property name="windowTitle">
    <string>GroupBox</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <property name="title">
-   <string>Device</string>
+   <string/>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
@@ -33,6 +36,9 @@
        </item>
        <item>
         <widget class="QLabel" name="uid_label">
+         <property name="styleSheet">
+          <string notr="true">color: #B0CB1F;</string>
+         </property>
          <property name="text">
           <string/>
          </property>
@@ -54,6 +60,9 @@
        </item>
        <item>
         <widget class="QLabel" name="addr_label">
+         <property name="styleSheet">
+          <string notr="true">color: #B0CB1F;</string>
+         </property>
          <property name="text">
           <string/>
          </property>
@@ -75,6 +84,33 @@
        </item>
        <item>
         <widget class="QLabel" name="sw_ver_label">
+         <property name="styleSheet">
+          <string notr="true">color: #B0CB1F;</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_8">
+       <item>
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>HW version:</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="hw_ver_label">
+         <property name="styleSheet">
+          <string notr="true">color: #B0CB1F;</string>
+         </property>
          <property name="text">
           <string/>
          </property>
@@ -96,6 +132,36 @@
        </item>
        <item>
         <widget class="QLabel" name="file_name_label">
+         <property name="styleSheet">
+          <string notr="true">color: #B0CB1F;</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_9">
+       <item>
+        <widget class="QLabel" name="req_addr_label">
+         <property name="styleSheet">
+          <string notr="true">color: #B0CB1F;</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="req_sw_ver_label">
+         <property name="styleSheet">
+          <string notr="true">color: #B0CB1F;</string>
+         </property>
          <property name="text">
           <string/>
          </property>
@@ -137,7 +203,7 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_7">
          <item>
-          <widget class="QPushButton" name="refresh_btn">
+          <widget class="QPushButton" name="upload_btn">
            <property name="minimumSize">
             <size>
              <width>30</width>
@@ -155,7 +221,7 @@
            </property>
            <property name="icon">
             <iconset resource="../Resources/icons.qrc">
-             <normaloff>:/icons/icons/refresh.svg</normaloff>:/icons/icons/refresh.svg</iconset>
+             <normaloff>:/icons/icons/ok_circle.svg</normaloff>:/icons/icons/ok_circle.svg</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -215,7 +281,7 @@
         </layout>
        </item>
        <item>
-        <widget class="QLabel" name="label">
+        <widget class="QLabel" name="time_label">
          <property name="text">
           <string>Time elapsed:</string>
          </property>
