--- a/device_item_view/deviceitem.ui
+++ b/device_item_view/deviceitem.ui
@@ -13,8 +13,11 @@
   <property name="windowTitle">
    <string>GroupBox</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <property name="title">
-   <string>Device</string>
+   <string/>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
@@ -33,6 +36,9 @@
        </item>
        <item>
         <widget class="QLabel" name="uid_label">
+         <property name="styleSheet">
+          <string notr="true">color: #B0CB1F;</string>
+         </property>
          <property name="text">
           <string/>
          </property>
@@ -54,6 +60,9 @@
        </item>
        <item>
         <widget class="QLabel" name="addr_label">
+         <property name="styleSheet">
+          <string notr="true">color: #B0CB1F;</string>
+         </property>
          <property name="text">
           <string/>
          </property>
@@ -75,6 +84,33 @@
        </item>
        <item>
         <widget class="QLabel" name="sw_ver_label">
+         <property name="styleSheet">
+          <string notr="true">color: #B0CB1F;</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_8">
+       <item>
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>HW version:</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="hw_ver_label">
+         <property name="styleSheet">
+          <string notr="true">color: #B0CB1F;</string>
+         </property>
          <property name="text">
           <string/>
          </property>
@@ -96,8 +132,41 @@
        </item>
        <item>
         <widget class="QLabel" name="file_name_label">
+         <property name="styleSheet">
+          <string notr="true">color: #B0CB1F;</string>
+         </property>
          <property name="text">
           <string/>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout_3">
+       <item>
+        <widget class="QLabel" name="req_sw_ver_label">
+         <property name="styleSheet">
+          <string notr="true">color: #B0CB1F;</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="req_addr_label">
+         <property name="styleSheet">
+          <string notr="true">color: #B0CB1F;</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
         </widget>
        </item>
@@ -137,7 +206,7 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_7">
          <item>
-          <widget class="QPushButton" name="refresh_btn">
+          <widget class="QPushButton" name="upload_btn">
            <property name="minimumSize">
             <size>
              <width>30</width>
@@ -154,8 +223,8 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="../Resources/icons.qrc">
-             <normaloff>:/icons/icons/refresh.svg</normaloff>:/icons/icons/refresh.svg</iconset>
+            <iconset resource="../resources/icons.qrc">
+             <normaloff>:/icons/icons/ok_circle.svg</normaloff>:/icons/icons/ok_circle.svg</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -192,7 +261,7 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="../Resources/icons.qrc">
+            <iconset resource="../resources/icons.qrc">
              <normaloff>:/icons/icons/close.svg</normaloff>:/icons/icons/close.svg</iconset>
            </property>
            <property name="iconSize">
@@ -215,7 +284,7 @@
         </layout>
        </item>
        <item>
-        <widget class="QLabel" name="label">
+        <widget class="QLabel" name="time_label">
          <property name="text">
           <string>Time elapsed:</string>
          </property>
@@ -238,7 +307,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="../Resources/icons.qrc"/>
+  <include location="../resources/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
